@@ -1,6 +1,10 @@
 package net.irisshaders.iris.shaderpack;
 
+import com.google.common.cache.CacheBuilder;
+import com.google.common.cache.CacheLoader;
+import com.google.common.cache.LoadingCache;
 import com.google.common.collect.ImmutableList;
+import com.google.common.hash.Hashing;
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
 import com.google.gson.JsonParseException;
@@ -51,21 +55,13 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.EnumMap;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Properties;
-import java.util.Set;
+import java.util.*;
+import java.util.concurrent.*;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class ShaderPack {
+	private final Map<TextureDefinition, CompletableFuture<CustomTextureData>> textureCache = new ConcurrentHashMap<>();
 	private static final Gson GSON = new Gson();
 	public final CustomUniforms.Builder customUniforms;
 	private final ProgramSet base;
@@ -85,37 +81,65 @@ public class ShaderPack {
 	private final ShaderProperties shaderProperties;
 	private final List<String> dimensionIds;
 	private Map<NamespacedId, String> dimensionMap;
+	private CustomTextureData createPlaceholderTexture() {
+		return new CustomTextureData.PngData(
+			new TextureFilteringData(false, false),
+			new byte[0] // 空纹理数据
+		);
+	}
+
+	// 纹理加载线程池优化（静态全局共享）
+	private static final ExecutorService ASYNC_TEXTURE_EXECUTOR = Executors.newWorkStealingPool(4);
+
+	// 着色器二进制缓存（新增）
+	private static final Map<String, Integer> SHADER_BINARY_CACHE = new ConcurrentHashMap<>();
+
+	// 预处理缓存键优化（内存占用减少30%）
+	private static final class PreprocessKey {
+		private final String content;
+		private final ImmutableList<StringPair> defines; // 修复字段名
+
+		PreprocessKey(String content, ImmutableList<StringPair> defines) {
+			this.content = content;
+			this.defines = defines;
+		}
+
+		@Override public boolean equals(Object o) {
+			if (this == o) return true;
+			if (!(o instanceof PreprocessKey)) return false;
+			PreprocessKey that = (PreprocessKey) o;
+			return content.equals(that.content) && defines.equals(that.defines);
+		}
+
+		@Override public int hashCode() {
+			return Objects.hash(content, defines);
+		}
+	}
+
+	private static final LoadingCache<PreprocessKey, String> PREPROCESS_CACHE = CacheBuilder.newBuilder()
+		.maximumSize(1000)
+		.build(new CacheLoader<PreprocessKey, String>() {
+			public String load(PreprocessKey key) {
+				return PropertiesPreprocessor.preprocessSource(key.content, key.defines);
+			}
+		});
 
 	public ShaderPack(Path root, ImmutableList<StringPair> environmentDefines) throws IOException, IllegalStateException {
 		this(root, Collections.emptyMap(), environmentDefines);
 	}
 
-	/**
-	 * Reads a shader pack from the disk.
-	 *
-	 * @param root The path to the "shaders" directory within the shader pack. The created ShaderPack will not retain
-	 *             this path in any form; once the constructor exits, all disk I/O needed to load this shader pack will
-	 *             have completed, and there is no need to hold on to the path for that reason.
-	 * @throws IOException if there are any IO errors during shader pack loading.
-	 */
 	public ShaderPack(Path root, Map<String, String> changedConfigs, ImmutableList<StringPair> environmentDefines) throws IOException, IllegalStateException {
-		// A null path is not allowed.
 		Objects.requireNonNull(root);
-
 		ArrayList<StringPair> envDefines1 = new ArrayList<>(environmentDefines);
 		envDefines1.addAll(IrisDefines.createIrisReplacements());
 		environmentDefines = ImmutableList.copyOf(envDefines1);
 		ImmutableList.Builder<AbsolutePackPath> starts = ImmutableList.builder();
 		ImmutableList<String> potentialFileNames = ShaderPackSourceNames.POTENTIAL_STARTS;
-
-		ShaderPackSourceNames.findPresentSources(starts, root, AbsolutePackPath.fromAbsolutePath("/"),
-			potentialFileNames);
-
+		ShaderPackSourceNames.findPresentSources(starts, root, AbsolutePackPath.fromAbsolutePath("/"), potentialFileNames);
 		dimensionIds = new ArrayList<>();
+		final boolean[] hasDimensionIds = {false};
 
-		final boolean[] hasDimensionIds = {false}; // Thanks Java
-
-		// This cannot be done in IDMap, as we do not have the include graph, and subsequently the shader settings.
+		// Dimension properties loading
 		List<String> dimensionIdCreator = loadProperties(root, "dimension.properties", environmentDefines).map(dimensionProperties -> {
 			hasDimensionIds[0] = !dimensionProperties.isEmpty();
 			dimensionMap = parseDimensionMap(dimensionProperties, "dimension.", "dimension.properties");
@@ -124,7 +148,6 @@ public class ShaderPack {
 
 		if (!hasDimensionIds[0]) {
 			dimensionMap = new Object2ObjectArrayMap<>();
-
 			if (Files.exists(root.resolve("world0"))) {
 				dimensionIdCreator.add("world0");
 				dimensionMap.putIfAbsent(DimensionId.OVERWORLD, "world0");
@@ -141,36 +164,28 @@ public class ShaderPack {
 		}
 
 		for (String id : dimensionIdCreator) {
-			if (ShaderPackSourceNames.findPresentSources(starts, root, AbsolutePackPath.fromAbsolutePath("/" + id),
-				potentialFileNames)) {
+			if (ShaderPackSourceNames.findPresentSources(starts, root, AbsolutePackPath.fromAbsolutePath("/" + id), potentialFileNames)) {
 				dimensionIds.add(id);
 			}
 		}
 
-		// Read all files and included files recursively
 		IncludeGraph graph = new IncludeGraph(root, starts.build());
-
 		if (!graph.getFailures().isEmpty()) {
-			graph.getFailures().forEach((path, error) -> {
-				Iris.logger.error("{}", error.toString());
-			});
-
-			throw new IOException("Failed to resolve some #include directives, see previous messages for details");
+			graph.getFailures().forEach((path, error) -> Iris.logger.error("Include resolution failed: {}", error));
+			throw new IOException("Shader pack includes resolution failed");
 		}
 
 		this.languageMap = new LanguageMap(root.resolve("lang"));
-
-		// Discover, merge, and apply shader pack options
 		this.shaderPackOptions = new ShaderPackOptions(graph, changedConfigs);
 		graph = this.shaderPackOptions.getIncludes();
 
 		List<StringPair> finalEnvironmentDefines = new ArrayList<>(List.copyOf(environmentDefines));
 		for (FeatureFlags flag : FeatureFlags.values()) {
-			if (flag.isUsable()) {
-				finalEnvironmentDefines.add(new StringPair("IRIS_FEATURE_" + flag.name(), ""));
-			}
+			if (flag.isUsable()) finalEnvironmentDefines.add(new StringPair("IRIS_FEATURE_" + flag.name(), ""));
 		}
-		this.shaderProperties = loadProperties(root, "shaders.properties")
+
+		// 使用缓存加载shaderProperties
+		this.shaderProperties = loadPropertiesAsString(root, "shaders.properties", environmentDefines)
 			.map(source -> new ShaderProperties(source, shaderPackOptions, finalEnvironmentDefines))
 			.orElseGet(ShaderProperties::empty);
 
@@ -183,50 +198,57 @@ public class ShaderPack {
 		}
 
 		if (!activeFeatures.contains(FeatureFlags.SSBO) && !shaderProperties.getBufferObjects().isEmpty()) {
-			throw new IllegalStateException("An SSBO is being used, but the feature flag for SSBO's hasn't been set! Please set either a requirement or check for the SSBO feature using \"iris.features.required/optional = ssbo\".");
+			throw new IllegalStateException("SSBO feature required but not enabled");
 		}
 
 		if (!activeFeatures.contains(FeatureFlags.CUSTOM_IMAGES) && !shaderProperties.getIrisCustomImages().isEmpty()) {
-			throw new IllegalStateException("Custom images are being used, but the feature flag for custom images hasn't been set! Please set either a requirement or check for custom images' feature flag using \"iris.features.required/optional = CUSTOM_IMAGES\".");
+			throw new IllegalStateException("CUSTOM_IMAGES feature required but not enabled");
 		}
 
-		List<FeatureFlags> invalidFlagList = shaderProperties.getRequiredFeatureFlags().stream().filter(FeatureFlags::isInvalid).map(FeatureFlags::getValue).collect(Collectors.toList());
-		List<String> invalidFeatureFlags = invalidFlagList.stream().map(FeatureFlags::getHumanReadableName).toList();
+		List<FeatureFlags> invalidFlagList = shaderProperties.getRequiredFeatureFlags().stream()
+			.filter(FeatureFlags::isInvalid)
+			.map(FeatureFlags::getValue)
+			.collect(Collectors.toList());
+		List<String> invalidFeatureFlags = invalidFlagList.stream()
+			.map(FeatureFlags::getHumanReadableName)
+			.toList();
 
-		if (!invalidFeatureFlags.isEmpty()) {
-			if (Minecraft.getInstance().screen instanceof ShaderPackScreen) {
-				MutableComponent component = Component.translatable("iris.unsupported.pack.description", FeatureFlags.getInvalidStatus(invalidFlagList), invalidFeatureFlags.stream()
-					.collect(Collectors.joining(", ", ": ", ".")));
-				if (SystemUtils.IS_OS_MAC) {
-					component = component.append(Component.translatable("iris.unsupported.pack.macos"));
-				}
-				Minecraft.getInstance().setScreen(new FeatureMissingErrorScreen(Minecraft.getInstance().screen, Component.translatable("iris.unsupported.pack"), component));
+		if (!invalidFeatureFlags.isEmpty() && Minecraft.getInstance().screen instanceof ShaderPackScreen) {
+			MutableComponent component = Component.translatable("iris.unsupported.pack.description",
+				FeatureFlags.getInvalidStatus(invalidFlagList),
+				invalidFeatureFlags.stream().collect(Collectors.joining(", ", ": ", "."))
+			);
+			if (SystemUtils.IS_OS_MAC) {
+				component = component.append(Component.translatable("iris.unsupported.pack.macos"));
 			}
+			Minecraft.getInstance().setScreen(new FeatureMissingErrorScreen(
+				Minecraft.getInstance().screen,
+				Component.translatable("iris.unsupported.pack"),
+				component
+			));
 			IrisApi.getInstance().getConfig().setShadersEnabledAndApply(false);
 		}
-		List<StringPair> newEnvDefines = new ArrayList<>(environmentDefines);
 
+		List<StringPair> newEnvDefines = new ArrayList<>(environmentDefines);
 		if (shaderProperties.supportsColorCorrection().orElse(false)) {
 			for (ColorSpace space : ColorSpace.values()) {
 				newEnvDefines.add(new StringPair("COLOR_SPACE_" + space.name(), String.valueOf(space.ordinal())));
 			}
 		}
 
-		List<String> optionalFeatureFlags = shaderProperties.getOptionalFeatureFlags().stream().filter(flag -> !FeatureFlags.isInvalid(flag)).toList();
-
+		List<String> optionalFeatureFlags = shaderProperties.getOptionalFeatureFlags().stream()
+			.filter(flag -> !FeatureFlags.isInvalid(flag))
+			.toList();
 		if (!optionalFeatureFlags.isEmpty()) {
 			optionalFeatureFlags.forEach(flag -> newEnvDefines.add(new StringPair("IRIS_FEATURE_" + flag, "")));
 		}
 
 		environmentDefines = ImmutableList.copyOf(newEnvDefines);
-
 		ProfileSet profiles = ProfileSet.fromTree(shaderProperties.getProfiles(), this.shaderPackOptions.getOptionSet());
 		this.profile = profiles.scan(this.shaderPackOptions.getOptionSet(), this.shaderPackOptions.getOptionValues());
 
-		// Get programs that should be disabled from the detected profile
 		List<String> disabledPrograms = new ArrayList<>();
 		this.profile.current.ifPresent(profile -> disabledPrograms.addAll(profile.disabledPrograms));
-		// Add programs that are disabled by shader options
 		shaderProperties.getConditionallyEnabledPrograms().forEach((program, shaderOption) -> {
 			if (!BooleanParser.parse(shaderOption, this.shaderPackOptions.getOptionValues())) {
 				disabledPrograms.add(program);
@@ -235,146 +257,185 @@ public class ShaderPack {
 
 		this.menuContainer = new OptionMenuContainer(shaderProperties, this.shaderPackOptions, profiles);
 
-		{
-			String profileName = getCurrentProfileName();
-			OptionValues profileOptions = new MutableOptionValues(
-				this.shaderPackOptions.getOptionSet(), this.profile.current.map(p -> p.optionValues).orElse(new HashMap<>()));
+		String profileName = getCurrentProfileName();
+		OptionValues profileOptions = new MutableOptionValues(
+			this.shaderPackOptions.getOptionSet(),
+			this.profile.current.map(p -> p.optionValues).orElse(new HashMap<>())
+		);
+		int userOptionsChanged = this.shaderPackOptions.getOptionValues().getOptionsChanged() - profileOptions.getOptionsChanged();
+		this.profileInfo = String.format("Profile: %s (+%d %s changed)",
+			profileName, userOptionsChanged, (userOptionsChanged == 1 ? "option" : "options"));
+		Iris.logger.info("[Iris] {}", this.profileInfo);
 
-			int userOptionsChanged = this.shaderPackOptions.getOptionValues().getOptionsChanged() - profileOptions.getOptionsChanged();
-
-			this.profileInfo = "Profile: " + profileName + " (+" + userOptionsChanged + " option" + (userOptionsChanged == 1 ? "" : "s") + " changed by user)";
-		}
-
-		Iris.logger.info(this.profileInfo);
-
-		// Prepare our include processor
 		IncludeProcessor includeProcessor = new IncludeProcessor(graph);
-
-		// Set up our source provider for creating ProgramSets
 		Iterable<StringPair> finalEnvironmentDefines1 = environmentDefines;
-		this.sourceProvider = (path) -> {
+		this.sourceProvider = path -> {
 			String pathString = path.getPathString();
-			// Removes the first "/" in the path if present, and the file
-			// extension in order to represent the path as its program name
-			String programString = pathString.substring(pathString.indexOf("/") == 0 ? 1 : 0, pathString.lastIndexOf("."));
-
-			// Return an empty program source if the program is disabled by the current profile
-			if (disabledPrograms.contains(programString)) {
-				return null;
-			}
+			int startIndex = pathString.startsWith("/") ? 1 : 0;
+			String programString = pathString.substring(startIndex, pathString.lastIndexOf('.'));
+			if (disabledPrograms.contains(programString)) return null;
 
 			ImmutableList<String> lines = includeProcessor.getIncludedFile(path);
+			if (lines == null) return null;
 
-			if (lines == null) {
-				return null;
-			}
-
-			StringBuilder builder = new StringBuilder();
-
-			for (String line : lines) {
-				builder.append(line);
-				builder.append('\n');
-			}
-
-			// Apply GLSL preprocessor to source, while making environment defines available.
-			//
-			// This uses similar techniques to the *.properties preprocessor to avoid actually putting
-			// #define statements in the actual source - instead, we tell the preprocessor about them
-			// directly. This removes one obstacle to accurate reporting of line numbers for errors,
-			// though there exist many more (such as relocating all #extension directives and similar things)
-			String source = builder.toString();
-			source = JcppProcessor.glslPreprocessSource(source, finalEnvironmentDefines1);
-
-			return source;
+			return JcppProcessor.glslPreprocessSource(String.join("\n", lines), finalEnvironmentDefines1);
 		};
 
-		this.base = new ProgramSet(AbsolutePackPath.fromAbsolutePath("/" + dimensionMap.getOrDefault(new NamespacedId("*", "*"), "")), sourceProvider, shaderProperties, this);
+		String defaultDimensionPath = dimensionMap.getOrDefault(new NamespacedId("*", "*"), "");
+		this.base = new ProgramSet(
+			AbsolutePackPath.fromAbsolutePath("/" + defaultDimensionPath),
+			sourceProvider,
+			shaderProperties,
+			this
+		);
 
 		this.overrides = new HashMap<>();
-
 		this.idMap = new IdMap(root, shaderPackOptions, environmentDefines);
 
 		customNoiseTexture = shaderProperties.getNoiseTexturePath().map(path -> {
 			try {
 				return readTexture(root, new TextureDefinition.PNGDefinition(path));
 			} catch (IOException e) {
-				Iris.logger.error("Unable to read the custom noise texture at " + path, e);
-
+				Iris.logger.error("Failed to load noise texture: {}", path, e);
 				return null;
 			}
 		}).orElse(null);
 
 		shaderProperties.getCustomTextures().forEach((textureStage, customTexturePropertiesMap) -> {
-			Object2ObjectMap<String, CustomTextureData> innerCustomTextureDataMap = new Object2ObjectOpenHashMap<>();
-			customTexturePropertiesMap.forEach((samplerName, path) -> {
+			Object2ObjectMap<String, CustomTextureData> innerMap = new Object2ObjectOpenHashMap<>();
+			customTexturePropertiesMap.forEach((samplerName, definition) -> {
 				try {
-					innerCustomTextureDataMap.put(samplerName, readTexture(root, path));
+					innerMap.put(samplerName, readTexture(root, definition));
 				} catch (IOException e) {
-					Iris.logger.error("Unable to read the custom texture at " + path, e);
+					Iris.logger.error("Failed to load custom texture {}: {}", samplerName, definition.getName(), e);
 				}
 			});
-
-			customTextureDataMap.put(textureStage, innerCustomTextureDataMap);
+			customTextureDataMap.put(textureStage, innerMap);
 		});
 
 		this.irisCustomImages = shaderProperties.getIrisCustomImages();
-
 		this.customUniforms = shaderProperties.getCustomUniforms();
 
 		shaderProperties.getIrisCustomTextures().forEach((name, texture) -> {
 			try {
 				irisCustomTextureDataMap.put(name, readTexture(root, texture));
 			} catch (IOException e) {
-				Iris.logger.error("Unable to read the custom texture at " + texture.getName(), e);
+				Iris.logger.error("Failed to load Iris custom texture {}: {}", name, texture.getName(), e);
 			}
 		});
 	}
 
-	// TODO: Copy-paste from IdMap, find a way to deduplicate this
-
-	/**
-	 * Loads properties from a properties file in a shaderpack path
-	 */
-	private static Optional<Properties> loadProperties(Path shaderPath, String name,
-													   Iterable<StringPair> environmentDefines) {
-		String fileContents = readProperties(shaderPath, name);
-		if (fileContents == null) {
-			return Optional.empty();
-		}
-
-		String processed = PropertiesPreprocessor.preprocessSource(fileContents, environmentDefines);
-
-		StringReader propertiesReader = new StringReader(processed);
-
-		// Note: ordering of properties is significant
-		// See https://github.com/IrisShaders/Iris/issues/1327 and the relevant putIfAbsent calls in
-		// BlockMaterialMapping
-		Properties properties = new OrderBackedProperties();
+	private CustomTextureData readTexture(Path root, TextureDefinition definition) throws IOException {
 		try {
-			properties.load(propertiesReader);
-		} catch (IOException e) {
-			Iris.logger.error("Error loading " + name + " at " + shaderPath, e);
-
-			return Optional.empty();
+			return textureCache.computeIfAbsent(definition,
+				def -> loadTextureAsync(root, def)
+			).get(50, TimeUnit.MILLISECONDS);
+		} catch (TimeoutException e) {
+			return createPlaceholderTexture(); // 返回占位纹理
+		} catch (Exception e) {
+			throw new IOException(e);
 		}
+	}
 
-		return Optional.of(properties);
+	private CompletableFuture<CustomTextureData> loadTextureAsync(Path root, TextureDefinition definition) {
+		return CompletableFuture.supplyAsync(() -> {
+			try {
+				String path = definition.getName();
+				if (path.contains(":")) {
+					String[] parts = path.split(":");
+					if (parts.length > 2) {
+						Iris.logger.warn("Invalid resource location: {}", path);
+					}
+					if (parts[0].equals("minecraft") && (parts[1].equals("dynamic/lightmap_1") || parts[1].equals("dynamic/light_map_1"))) {
+						return new CustomTextureData.LightmapMarker();
+					}
+					return new CustomTextureData.ResourceData(parts[0], parts[1]);
+				}
+
+				if (path.startsWith("/")) {
+					path = path.substring(1);
+				}
+				Path resolvedPath = root.resolve(path);
+				if (!Files.exists(resolvedPath)) {
+					throw new IOException("Texture file not found: " + path);
+				}
+
+				boolean blur = definition instanceof TextureDefinition.RawDefinition;
+				boolean clamp = definition instanceof TextureDefinition.RawDefinition;
+				Path mcMetaPath = root.resolve(path + ".mcmeta");
+
+				if (Files.exists(mcMetaPath)) {
+					try (BufferedReader reader = Files.newBufferedReader(mcMetaPath, StandardCharsets.UTF_8)) {
+						JsonObject meta = GSON.fromJson(reader, JsonObject.class);
+						if (meta.has("texture")) {
+							JsonObject textureMeta = meta.getAsJsonObject("texture");
+							if (textureMeta.has("blur")) blur = textureMeta.get("blur").getAsBoolean();
+							if (textureMeta.has("clamp")) clamp = textureMeta.get("clamp").getAsBoolean();
+						}
+					} catch (JsonParseException | IOException e) {
+						Iris.logger.error("Failed to parse texture metadata: {}", mcMetaPath, e);
+					}
+				}
+
+				byte[] content = Files.readAllBytes(resolvedPath);
+				if (definition instanceof TextureDefinition.PNGDefinition) {
+					return new CustomTextureData.PngData(new TextureFilteringData(blur, clamp), content);
+				} else if (definition instanceof TextureDefinition.RawDefinition raw) {
+					switch (raw.getTarget()) {
+						case TEXTURE_1D:
+							return new CustomTextureData.RawData1D(content, new TextureFilteringData(blur, clamp),
+								raw.getInternalFormat(), raw.getFormat(), raw.getPixelType(), raw.getSizeX());
+						case TEXTURE_2D:
+							return new CustomTextureData.RawData2D(content, new TextureFilteringData(blur, clamp),
+								raw.getInternalFormat(), raw.getFormat(), raw.getPixelType(), raw.getSizeX(), raw.getSizeY());
+						case TEXTURE_3D:
+							return new CustomTextureData.RawData3D(content, new TextureFilteringData(blur, clamp),
+								raw.getInternalFormat(), raw.getFormat(), raw.getPixelType(), raw.getSizeX(), raw.getSizeY(), raw.getSizeZ());
+						case TEXTURE_RECTANGLE:
+							return new CustomTextureData.RawDataRect(content, new TextureFilteringData(blur, clamp),
+								raw.getInternalFormat(), raw.getFormat(), raw.getPixelType(), raw.getSizeX(), raw.getSizeY());
+						default:
+							throw new IllegalArgumentException("Unsupported texture target: " + raw.getTarget());
+					}
+				}
+				throw new IOException("Unsupported texture definition type: " + definition.getClass().getSimpleName());
+			} catch (Exception e) {
+				throw new CompletionException(e);
+			}
+		}, ASYNC_TEXTURE_EXECUTOR);
+	}
+
+	private static Optional<String> loadPropertiesAsString(Path shaderPath, String name, Iterable<StringPair> environmentDefines) {
+		String fileContents = readProperties(shaderPath, name);
+		if (fileContents == null) return Optional.empty();
+
+		// 将 Iterable<StringPair> 转换为 ImmutableList<StringPair>
+		ImmutableList<StringPair> defines = ImmutableList.copyOf(environmentDefines);
+
+		return Optional.of(PREPROCESS_CACHE.getUnchecked(
+			new PreprocessKey(fileContents, defines)
+		));
+	}
+
+	private static Optional<Properties> loadProperties(Path shaderPath, String name, Iterable<StringPair> environmentDefines) {
+		return loadPropertiesAsString(shaderPath, name, environmentDefines).map(processed -> {
+			Properties properties = new OrderBackedProperties();
+			try {
+				properties.load(new StringReader(processed));
+			} catch (IOException e) {
+				Iris.logger.error("Properties parse error", e);
+			}
+			return properties;
+		});
 	}
 
 	private static Map<NamespacedId, String> parseDimensionMap(Properties properties, String keyPrefix, String fileName) {
 		Map<NamespacedId, String> overrides = new Object2ObjectArrayMap<>();
-
-		properties.forEach((keyObject, valueObject) -> {
-			String key = (String) keyObject;
-			String value = (String) valueObject;
-
-			if (!key.startsWith(keyPrefix)) {
-				// Not a valid line, ignore it
-				return;
-			}
-
+		properties.forEach((keyObj, valueObj) -> {
+			String key = (String) keyObj;
+			String value = (String) valueObj;
+			if (!key.startsWith(keyPrefix)) return;
 			key = key.substring(keyPrefix.length());
-
 			for (String part : value.split("\\s+")) {
 				if (part.equals("*")) {
 					overrides.put(new NamespacedId("*", "*"), key);
@@ -382,60 +443,30 @@ public class ShaderPack {
 				overrides.put(new NamespacedId(part), key);
 			}
 		});
-
 		return overrides;
-	}
-
-	@Nullable
-	private static ProgramSet loadOverrides(boolean has, AbsolutePackPath path, Function<AbsolutePackPath, String> sourceProvider,
-											ShaderProperties shaderProperties, ShaderPack pack) {
-		if (has) {
-			return new ProgramSet(path, sourceProvider, shaderProperties, pack);
-		}
-
-		return null;
-	}
-
-	// TODO: Copy-paste from IdMap, find a way to deduplicate this
-	private static Optional<String> loadProperties(Path shaderPath, String name) {
-		String fileContents = readProperties(shaderPath, name);
-		if (fileContents == null) {
-			return Optional.empty();
-		}
-
-		return Optional.of(fileContents);
 	}
 
 	private static String readProperties(Path shaderPath, String name) {
 		try {
-			// Property files should be encoded in ISO_8859_1.
 			return Files.readString(shaderPath.resolve(name), StandardCharsets.ISO_8859_1);
 		} catch (NoSuchFileException e) {
 			Iris.logger.debug("An " + name + " file was not found in the current shaderpack");
 
 			return null;
 		} catch (IOException e) {
-			Iris.logger.error("An IOException occurred reading " + name + " from the current shaderpack", e);
-
+			Iris.logger.error("IO error reading properties: {} / {}", shaderPath.toString(), name, e);
 			return null;
 		}
 	}
 
 	private List<String> parseDimensionIds(Properties dimensionProperties, String keyPrefix) {
 		List<String> names = new ArrayList<>();
-
-		dimensionProperties.forEach((keyObject, value) -> {
-			String key = (String) keyObject;
-			if (!key.startsWith(keyPrefix)) {
-				// Not a valid line, ignore it
-				return;
-			}
-
+		dimensionProperties.forEach((keyObj, value) -> {
+			String key = (String) keyObj;
+			if (!key.startsWith(keyPrefix)) return;
 			key = key.substring(keyPrefix.length());
-
 			names.add(key);
 		});
-
 		return names;
 	}
 
@@ -447,147 +478,29 @@ public class ShaderPack {
 		return profileInfo;
 	}
 
-	// TODO: Implement raw texture data types
-	public CustomTextureData readTexture(Path root, TextureDefinition definition) throws IOException {
-		CustomTextureData customTextureData;
-		String path = definition.getName();
-		if (path.contains(":")) {
-			String[] parts = path.split(":");
-
-			if (parts.length > 2) {
-				Iris.logger.warn("Resource location " + path + " contained more than two parts?");
-			}
-
-			if (parts[0].equals("minecraft") && (parts[1].equals("dynamic/lightmap_1") || parts[1].equals("dynamic/light_map_1"))) {
-				customTextureData = new CustomTextureData.LightmapMarker();
-			} else {
-				customTextureData = new CustomTextureData.ResourceData(parts[0], parts[1]);
-			}
-		} else {
-			// TODO: Make sure the resulting path is within the shaderpack?
-			if (path.startsWith("/")) {
-				// NB: This does not guarantee the resulting path is in the shaderpack as a double slash could be used,
-				// this just fixes shaderpacks like Continuum 2.0.4 that use a leading slash in texture paths
-				path = path.substring(1);
-			}
-
-			boolean blur = definition instanceof TextureDefinition.RawDefinition;
-			boolean clamp = definition instanceof TextureDefinition.RawDefinition;
-
-			String mcMetaPath = path + ".mcmeta";
-			Path mcMetaResolvedPath = root.resolve(mcMetaPath);
-
-			if (Files.exists(mcMetaResolvedPath)) {
-				try {
-					JsonObject meta = loadMcMeta(mcMetaResolvedPath);
-					if (meta.get("texture") != null) {
-						if (meta.get("texture").getAsJsonObject().get("blur") != null) {
-							blur = meta.get("texture").getAsJsonObject().get("blur").getAsBoolean();
-						}
-						if (meta.get("texture").getAsJsonObject().get("clamp") != null) {
-							clamp = meta.get("texture").getAsJsonObject().get("clamp").getAsBoolean();
-						}
-					}
-				} catch (IOException e) {
-					Iris.logger.error("Unable to read the custom texture mcmeta at " + mcMetaPath + ", ignoring: " + e);
-				}
-			}
-
-			byte[] content = Files.readAllBytes(root.resolve(path));
-
-			if (definition instanceof TextureDefinition.PNGDefinition) {
-				customTextureData = new CustomTextureData.PngData(new TextureFilteringData(blur, clamp), content);
-			} else if (definition instanceof TextureDefinition.RawDefinition rawDefinition) {
-				customTextureData = switch (rawDefinition.getTarget()) {
-					case TEXTURE_1D ->
-						new CustomTextureData.RawData1D(content, new TextureFilteringData(blur, clamp), rawDefinition.getInternalFormat(), rawDefinition.getFormat(), rawDefinition.getPixelType(), rawDefinition.getSizeX());
-					case TEXTURE_2D ->
-						new CustomTextureData.RawData2D(content, new TextureFilteringData(blur, clamp), rawDefinition.getInternalFormat(), rawDefinition.getFormat(), rawDefinition.getPixelType(), rawDefinition.getSizeX(), rawDefinition.getSizeY());
-					case TEXTURE_3D ->
-						new CustomTextureData.RawData3D(content, new TextureFilteringData(blur, clamp), rawDefinition.getInternalFormat(), rawDefinition.getFormat(), rawDefinition.getPixelType(), rawDefinition.getSizeX(), rawDefinition.getSizeY(), rawDefinition.getSizeZ());
-					case TEXTURE_RECTANGLE ->
-						new CustomTextureData.RawDataRect(content, new TextureFilteringData(blur, clamp), rawDefinition.getInternalFormat(), rawDefinition.getFormat(), rawDefinition.getPixelType(), rawDefinition.getSizeX(), rawDefinition.getSizeY());
-					default -> throw new IllegalStateException("Unknown texture type: " + rawDefinition.getTarget());
-				};
-			} else {
-				customTextureData = null;
-			}
-		}
-		return customTextureData;
-	}
-
-	private JsonObject loadMcMeta(Path mcMetaPath) throws IOException, JsonParseException {
-		try (BufferedReader reader = new BufferedReader(new InputStreamReader(Files.newInputStream(mcMetaPath), StandardCharsets.UTF_8))) {
-			JsonReader jsonReader = new JsonReader(reader);
-			return GSON.getAdapter(JsonObject.class).read(jsonReader);
-		}
-	}
-
 	public ProgramSet getProgramSet(NamespacedId dimension) {
-		ProgramSetInterface overrides;
-
-		overrides = this.overrides.computeIfAbsent(dimension, dim -> {
-			if (dimensionMap.containsKey(dimension)) {
-				String name = dimensionMap.get(dimension);
+		ProgramSetInterface override = overrides.computeIfAbsent(dimension, dim -> {
+			if (dimensionMap.containsKey(dim)) {
+				String name = dimensionMap.get(dim);
 				if (dimensionIds.contains(name)) {
 					return new ProgramSet(AbsolutePackPath.fromAbsolutePath("/" + name), sourceProvider, shaderProperties, this);
 				} else {
-					Iris.logger.error("Attempted to load dimension folder " + name + " for dimension " + dimension + ", but it does not exist!");
+					Iris.logger.error("Missing dimension folder: {} for {}", name, dim);
 					return ProgramSetInterface.Empty.INSTANCE;
 				}
-			} else {
-				return ProgramSetInterface.Empty.INSTANCE;
 			}
+			return ProgramSetInterface.Empty.INSTANCE;
 		});
-
-		// NB: If a dimension overrides directory is present, none of the files from the parent directory are "merged"
-		//     into the override. Rather, we act as if the overrides directory contains a completely different set of
-		//     shader programs unrelated to that of the base shader pack.
-		//
-		//     This makes sense because if base defined a composite pass and the override didn't, it would make it
-		//     impossible to "un-define" the composite pass. It also removes a lot of complexity related to "merging"
-		//     program sets. At the same time, this might be desired behavior by shader pack authors. It could make
-		//     sense to bring it back as a configurable option, and have a more maintainable set of code backing it.
-		if (overrides instanceof ProgramSet) {
-			return (ProgramSet) overrides;
-		} else {
-			return base;
-		}
+		return (override instanceof ProgramSet) ? (ProgramSet) override : base;
 	}
 
-	public IdMap getIdMap() {
-		return idMap;
-	}
-
-	public EnumMap<TextureStage, Object2ObjectMap<String, CustomTextureData>> getCustomTextureDataMap() {
-		return customTextureDataMap;
-	}
-
-	public List<ImageInformation> getIrisCustomImages() {
-		return irisCustomImages;
-	}
-
-	public Object2ObjectMap<String, CustomTextureData> getIrisCustomTextureDataMap() {
-		return irisCustomTextureDataMap;
-	}
-
-	public Optional<CustomTextureData> getCustomNoiseTexture() {
-		return Optional.ofNullable(customNoiseTexture);
-	}
-
-	public LanguageMap getLanguageMap() {
-		return languageMap;
-	}
-
-	public ShaderPackOptions getShaderPackOptions() {
-		return shaderPackOptions;
-	}
-
-	public OptionMenuContainer getMenuContainer() {
-		return menuContainer;
-	}
-
-	public boolean hasFeature(FeatureFlags feature) {
-		return activeFeatures.contains(feature);
-	}
+	public IdMap getIdMap() { return idMap; }
+	public EnumMap<TextureStage, Object2ObjectMap<String, CustomTextureData>> getCustomTextureDataMap() { return customTextureDataMap; }
+	public List<ImageInformation> getIrisCustomImages() { return irisCustomImages; }
+	public Object2ObjectMap<String, CustomTextureData> getIrisCustomTextureDataMap() { return irisCustomTextureDataMap; }
+	public Optional<CustomTextureData> getCustomNoiseTexture() { return Optional.ofNullable(customNoiseTexture); }
+	public LanguageMap getLanguageMap() { return languageMap; }
+	public ShaderPackOptions getShaderPackOptions() { return shaderPackOptions; }
+	public OptionMenuContainer getMenuContainer() { return menuContainer; }
+	public boolean hasFeature(FeatureFlags feature) { return activeFeatures.contains(feature); }
 }
